--- a/translations/close_to_enemies.tex/fr.po
+++ b/translations/close_to_enemies.tex/fr.po
@@ -452,7 +452,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{évènements programés}}\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\\textbf{Manche 1:}\n"
 "\\begin{itemize}\n"
 "  \\item Au début de la Manche, chaque Joueur révèle sa \\textit{Tuile Nemesis} (Tuile Lointaine (II--III) avec l'Enclave correspondant au terrain de sa Ville). Ces Tuiles sont révélées sans coût.\n"
