--- a/translations/emerald_island.tex/fr.po
+++ b/translations/emerald_island.tex/fr.po
@@ -118,7 +118,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Événements programmés}}\n"
 "\n"
 
 #. type: multicols
@@ -319,7 +319,7 @@ msgid ""
 "Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
-"Revendiquez chaque Mines et Enclaves. (Ne pas oubliez la Mine de la Tuile I. Chaque Tuile II--III contient une Mine ou une Enclave avec un combat de niveau III.)\n"
+"Revendiquez chaque Mines et Enclaves. (N'oubliez pas la Mine de la Tuile I. Chaque Tuile II--III contient une Mine ou une Enclave avec un combat de niveau III.)\n"
 "\n"
 
 #. type: multicols
@@ -329,7 +329,7 @@ msgid ""
 "There are unflagged Mines or Settlements left in map at the end of Round 8.\n"
 "\n"
 msgstr ""
-"Il y a des Mines ou Enclaves non revendiquez à la fin de la Manche 8.\n"
+"Il y a des Mines ou Enclaves non revendiquées à la fin de la Manche 8.\n"
 "\n"
 
 #. type: multicols
@@ -344,7 +344,7 @@ msgid ""
 msgstr ""
 "\\textbf{Manche 5:}\n"
 "\\begin{itemize}\n"
-"  \\item Gagnez à nouveau la récompense d'une case avec un Cube noir.\n"
+"  \\item Gagnez à nouveau la récompense d'une case avec un cube noir.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -357,7 +357,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"    \\item Ignorez les bordures jaunes entre les Tuiles I (mais pas entre les Tuilles I et II--III).\n"
+"    \\item Ignorez les bordures jaunes entre les Tuiles I (mais pas entre les Tuiles I et II--III).\n"
 "\n"
 
 #. type: multicols
@@ -427,7 +427,7 @@ msgid ""
 "    \\item The first time you reach Level IV, gain your second specialty.\n"
 "\n"
 msgstr ""
-"    \\item Au votre premier Niveau IV, gagnez votre deuxième Carte de Spécialité.\n"
+"    \\item À votre premier Niveau IV, gagnez votre deuxième Carte de Spécialité.\n"
 "\n"
 
 #. type: multicols
@@ -454,7 +454,7 @@ msgid ""
 msgstr ""
 "    \\item De plus, aucun Joueur ne peut:\n"
 "    \\begin{itemize}\n"
-"        \\item Attaquer d'autres Héros other Heroes.\n"
+"        \\item Attaquer d'autres Héros.\n"
 "        \\item Capturer une Mine ou une Enclave déjà Revendiquée.\n"
 "    \\end{itemize}\n"
 "\\end{itemize}\n"
