--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -70,7 +70,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Événements programmés}}\n"
 "\n"
 
 #. type: multicols
@@ -175,9 +175,9 @@ msgid ""
 "If by nothing else, then by sheer force of will.}\n"
 "\n"
 msgstr ""
-"\\textit{sz Dragons Sauvages terrorisent la campagne.\n"
+"\\textit{Des Dragons Sauvages terrorisent la campagne.\n"
 "Les fermiers ne peuvent pas cultiver leurs récoltes en paix, les caravanes ont trop peur pour transporter leurs biens.\n"
-"Il faut frapper au cœur et vaincre ses bêtes.\n"
+"Il faut frapper au cœur et vaincre ces bêtes.\n"
 "Même s'il le faut, alors ce sera par la seule Force de la Volonté.}\n"
 "\n"
 
@@ -365,7 +365,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Quand un Joueur Visite un Obélisque, il lance 2 \\svg{treasure} et choisir un résultat.\n"
+"  \\item Quand un Joueur Visite un Obélisque, il lance 2 \\svg{treasure} et choisit un résultat.\n"
 "  \\item Diplomatie est interdite pour éviter le combat de la Case des Terres Désolées.\n"
 "  \\item Quand un Héros se déplace sur la Case des Terres Désolées, il doit combattre, en fonction de la difficulté choisie, les Unités Neutres suivantes:\n"
 "  \\begin{itemize}\n"
