--- a/translations/stand_united.tex/fr.po
+++ b/translations/stand_united.tex/fr.po
@@ -387,10 +387,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{évènements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\\textbf{Manche 4:}\n"
 "\\begin{itemize}\n"
-"  \\item Lancez un \\svg{resource} et résoudre le résultat.\n"
+"  \\item Lancez un \\svg{resource} et résolvez le résultat.\n"
 "\\end{itemize}\n"
 "\\textbf{Manche 6:}\n"
 "\\begin{itemize}\n"
