--- a/translations/trial_by_combat.tex/fr.po
+++ b/translations/trial_by_combat.tex/fr.po
@@ -190,7 +190,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Conditions de Victoire}}\n"
-"Quand un Joueur Revendique «La Colline», chaque Joueur, y compris celui sur «La Colline», a deux tours complets en plus. Puis, la partie s'arrête et le Joueur contrôlant «La Colline» gagne. Cependant, si «La Colline» n'a pas été revendiquée au début de la Manche 9, le premier Joueur a la Revendiquée, pendant ou après la Manche 9, gagne immédiatement.\n"
+"Quand un Joueur Revendique «La Colline», chaque Joueur, y compris celui sur «La Colline», a deux tours complets en plus. Puis, la partie s'arrête et le Joueur contrôlant «La Colline» gagne. Cependant, si «La Colline» n'a pas été revendiquée au début de la Manche 9, le premier Joueur à la Revendiquer, pendant ou après la Manche 9, gagne immédiatement.\n"
 "\n"
 
 #. type: multicols*
@@ -346,7 +346,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Après avoir gagné une Combat Neutre, vous pouvez sacrifier 2 Unités \\bronze{} pour gagner 1 Unité 1 \\silver\\ que vous avez vaincu.\n"
+"  \\item Après avoir gagné un Combat Neutre, vous pouvez sacrifier 2 Unités \\bronze{} pour gagner 1 Unité \\silver\\ que vous avez vaincue.\n"
 "  \\item Quand un Héros Principal est battu, au prochain tour de ce Joueur, il peut Renforcer une Carte Statistique de son Deck, et Fouiller (2) le Deck Neutre \\silver{}.\n"
 "\\end{itemize}\n"
 "\n"
