--- a/translations/inferno_devilish_plan.tex/fr.po
+++ b/translations/inferno_devilish_plan.tex/fr.po
@@ -460,7 +460,7 @@ msgstr ""
 "      \\item 1 × Précision\\footnote{Ce résous sur la première Unité \\svg{unit_ranged} capable de faire une attaque \\svg{unit_ranged}}\n"
 "      \\item 1 × Flèche Magique\n"
 "    \\end{itemize}\n"
-"  \\item \\textbf{Compétence:} Archerie (uniquement effet Basique)\n"
+"  \\item \\textbf{Compétence:} Archerie (effet Basique)\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -717,7 +717,7 @@ msgid ""
 msgstr ""
 "\\textbf{Quand vous complétez le Scénario:}\n"
 "\\begin{itemize}\n"
-"  \\item Lisez «Félicitations!» Vous avez complété votre quête de tuer ces redoutables bêtes et revendiqué la victoire!''\n"
+"  \\item Lisez: Félicitations! Vous avez complété votre quête de tuer ces redoutables bêtes et revendiqué la victoire!''\n"
 "\\end{itemize}\n"
 "\n"
 
