--- a/translations/inferno_devilish_plan.tex/fr.po
+++ b/translations/inferno_devilish_plan.tex/fr.po
@@ -753,7 +753,7 @@ msgstr ""
 "    \\item La Tuile N7 est inaccessible tant que Ivor n'est pas vaincu.\n"
 "    \\item Aux Terres Désolées, votre Héros combat l'Armée des Dragons d'Or.\n"
 "    \\item Le «Passage Funeste» ne peut pas être construit.\n"
-"    \\item Si votre Héros Visite un Obélisque, vous pouvez Fouiller (2) le Deck Compétence, Artefact ou Sort.\n"
+"    \\item Visiter un Obélisque, permet de Fouiller (2) le Deck Compétence, Artefact ou Sort.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -777,8 +777,8 @@ msgstr ""
 "    };\n"
 "    \\node at (2.0, 0.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
 "    \\node at (13.0, -0.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
-"    \\node at (5.0, -11.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{IHadès}}}}};\n"
-"    \\node at (5.0, -11.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Tuiles}}}}};\n"
+"    \\node at (5.0, -11.1) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Tuiles}}}}};\n"
+"    \\node at (5.0, -11.8) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Hadès}}}}};\n"
 "  "
 
 #. type: multicols*
