--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -103,7 +103,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Événements programmés}}\n"
+"\\subsection*{\\MakeUppercase{Évènements programmés}}\n"
 "\n"
 
 #. type: multicols
@@ -378,7 +378,7 @@ msgstr ""
 "  \\item Les Héros ne peuvent pas fuir le combat contre le Boss Dragon.\n"
 "  \\item Quand un Joueur Visite un Obélisque, il choisit de lancer un Dé de Trésor ou gagner 1 \\svg{experience}.\n"
 "  \\item Chaque Joueur ne peut Visiter chaque Obélisque qu'une fois.\n"
-"    Après, il doit placer un cube de Faction sur la Case.\n"
+"    Après, il doit placer un Cube de Faction sur la Case.\n"
 "  \\item Le Combat de Boss n'a pas de limite de Tour de Combat.\n"
 "\\end{itemize}\n"
 "\\columnbreak\n"
