--- a/translations/the_hunt.tex/fr.po
+++ b/translations/the_hunt.tex/fr.po
@@ -374,11 +374,11 @@ msgstr ""
 "  \\item Seul le Héros Principal peut tuer le Dragon.\n"
 "  \\item Le combat final avec le Dragon se produit sur la Case au centre de la Tuile Centre.\n"
 "    Se référer aux règles spécifiques de chaque Dragon pour ce combat.\n"
-"  \\item Durant ce combat, ignorez la capacité spéciales des Gorgones.\n"
+"  \\item Durant ce combat, ignorez la capacité spéciale des Gorgones.\n"
 "  \\item Les Héros ne peuvent pas fuir le combat contre le Boss Dragon.\n"
 "  \\item Quand un Joueur Visite un Obélisque, il choisit de lancer un Dé de Trésor ou gagner 1 \\svg{experience}.\n"
 "  \\item Chaque Joueur ne peut Visiter chaque Obélisque qu'une fois.\n"
-"    Après, il doit placer une Cube de Faction sur la Case.\n"
+"    Après, il doit placer un Cube de Faction sur la Case.\n"
 "  \\item Le Combat de Boss n'a pas de limite de Tour de Combat.\n"
 "\\end{itemize}\n"
 "\\columnbreak\n"
@@ -521,7 +521,7 @@ msgstr ""
 "\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
 "{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Facile}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficle}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficile}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ "
 "\\lightcell[1.8]{Pas de changement\\\\ additionnel} & \\lightcell[1.8]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
@@ -717,7 +717,7 @@ msgstr ""
 "\\renewcommand{\\azure}{\\origazure[20]} \\begin{tabularx}{0.95\\linewidth}"
 "{XXXX} \\darkcell{\\raisebox{-.2\\height}{\\bronze} \\textbf{Facile}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\silver} \\textbf{Normal}} & "
-"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficle}} & "
+"\\darkcell{\\raisebox{-.2\\height}{\\golden} \\textbf{Difficile}} & "
 "\\darkcell{\\raisebox{-.2\\height}{\\azure} \\textbf{Impossible}}\\\\ "
 "\\lightcell[2.5]{Pas de Changement\\\\ additionnel} & \\lightcell[2.5]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
