--- a/translations/titans_stronghold.tex/de.po
+++ b/translations/titans_stronghold.tex/de.po
@@ -360,7 +360,7 @@ msgid ""
 "There are undefeated Units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
-"Es gibt noch unbesiegte Einheiten in der Festung der Titanen am Ende von Runde 16 (15 auf dem Schwierigkeitsgrad Unmöglich).\n"
+"Es gibt noch unbesiegte Einheiten in der Fes-tung der Titanen am Ende von Runde 16 (15 auf dem Schwierigkeitsgrad Unmöglich).\n"
 "\n"
 
 #. type: multicols*
@@ -425,9 +425,9 @@ msgid ""
 msgstr ""
 "  \\item Nach dem Besiegen einer neutralen Level VII-Armee wählt der Spieler dreimal von folgender Liste anstatt das Feld abzuhandeln (Mehrfachauswahl möglich):\n"
 "    \\begin{itemize}\n"
-"      \\item Ein anderer Spieler deiner Wahl erhält 5\\,\\svg{gold}\n"
-"      \\item Ein anderer Spieler deiner Wahl erhält 2\\,\\svg{building_materials}\n"
-"      \\item Ein anderer Spieler deiner Wahl erhält 1\\,\\svg{valuables}\n"
+"      \\item Ein anderer Spieler erhält 5\\,\\svg{gold}\n"
+"      \\item Ein anderer Spieler erhält 2\\,\\svg{building_materials}\n"
+"      \\item Ein anderer Spieler erhält 1\\,\\svg{valuables}\n"
 "    \\end{itemize}\n"
 "  Markiere dann das Feld mit einem deiner Fraktionswürfel.\n"
 "  (Du erhältst keinen Bonus im Solospiel!)\n"
@@ -455,8 +455,8 @@ msgid ""
 "  \\item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit Cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the Cards from certain expansions).\n"
 "\n"
 msgstr ""
-"  \\item Wenn ein Spieler einen Obelisken besucht, würfelt dieser 1 \\svg{treasure} und \\svg{resource} und handelt 1 davon ab.\n"
-"  \\item Wenn alle VI-VII-Gebiete (außer der Festung der TItanen) eingenommen wurden, zieht zufällig eine Anzahl neutrale Einheiten-Karten (siehe nächste Seite), um einen separaten neutrale Einheiten-Stapel für die Festung der Titanen zu erhalten (das Deck der Festung der Titanen wird manchmal zweigeteilt, da manche Szenarien sonst mit Karten bestimmter Erweiterungen nicht möglich sind).\n"
+"  \\item Wenn ein Spieler einen Obelisken besucht, würfelt dieser 1 \\svg{treasure} und 1 \\svg{resource} und handelt 1 davon ab.\n"
+"  \\item Wenn alle VI-VII-Gebiete (außer der Festung der Titanen) eingenommen wurden, zieht zufällig eine Anzahl neutrale Einheiten-Karten (siehe nächste Seite), um einen separaten neutrale Einheiten-Stapel für die Festung der Titanen zu erhalten (das Deck der Festung der Titanen wird manchmal zweigeteilt, da manche Szenarien sonst mit Karten bestimmter Erweiterungen nicht möglich sind).\n"
 "\n"
 
 #. type: multicols*
@@ -474,7 +474,7 @@ msgid ""
 "\n"
 msgstr ""
 "  \\item Wenn ein Held die Festung der Titanen betritt, zieht ihr 5 Karten vom Stapel der Festung der Titanen anstatt von den neutrale Einheiten-Stapeln. Die Einheiten werden auf dem Kampf-Spielplan platziert (siehe Seite 29 in der Anleitung). Die Spieler versuchen, die Einheiten zu besiegen, die sie in der Festung der Titanen finden. Alle neutralen Einheiten, die während des Kampfes besiegt werden, werden zurück in die neutrale Einheiten-Stapel gelegt. Alle neutralen Einheiten, die den Kampf überleben, werden in das Deck der Festung der Titanen gemischt. Sollten nicht genügend Karten in diesem Deck vorhanden sein, zieht so viele Karten wie möglich und platziert sie auf dem Kampf-Spielplan.\n"
-"  \\item Es kostet 1 \\svgeven{movement}, um einen Kampf um eine Kampfrunde zu verlängern, genau wie bei Kämpfen gegen nicht-Azur-Einheiten.\n"
+"  \\item Es kostet in der Festung 1 \\svgeven{movement}, um einen Kampf um eine Kampfrunde zu verlängern, genau wie bei Kämpfen gegen nicht-Azur-Einheiten.\n"
 "  \\item Zusätzlich kann kein Spieler:\n"
 "  \\begin{itemize}\n"
 "    \\item Andere Helden angreifen.\n"
