--- a/translations/titans_stronghold.tex/de.po
+++ b/translations/titans_stronghold.tex/de.po
@@ -373,7 +373,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{tikzpicture}[overlay]\n"
-"  \\node[inner sep=0pt, opacity=0.2] at (0, -6.2) {\\includegraphics[width=0.75\\linewidth, keepaspectratio]{\\art/shackles_of_war.png}};\n"
+"  \\begin{scope}[transform canvas={cm={-1,0,0,1,(0,0)}}]\n"
+"    \\node[inner sep=0pt, opacity=0.2] at (0.3, -5) {\\includegraphics[width=0.85\\linewidth, keepaspectratio]{\\art/shackles_of_war.png}};\n"
+"  \\end{scope}\n"
 "\\end{tikzpicture}\n"
 "\n"
 
