Unify yellow glyph naming

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -171,7 +171,7 @@ During this Scenario:
   \lightcell[1.8]{No additional\\changes} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
-  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +2 \svg{attack_yellow} \\ +2 \svg{defense_yellow}}
+  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +2 \svg{attack-yellow} \\ +2 \svg{defense-yellow}}
   \end{tabularx}
 }
 
@@ -240,7 +240,7 @@ During this Scenario:
   \lightcell[2.8]{No additional\\changes} &
   \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
   \lightcell[2.8]{{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 26 \\ +1 Retaliation}} &
-  \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Retaliation  \\ Remove additional 2 \svg{damage-table} by consuming Golems} \\
+  \lightcell[2.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 32 \\ +1 Retaliation  \\ Remove additional 2 \svg{damage-yellow} by consuming Golems} \\
   \end{tabularx}
 }
 
