--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -63,7 +63,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
       \darkcell[2]{\#C1 Settlement}
       & \lightcell[2]{Combat with Neutral Units cannot be skipped\textsuperscript{\hyperref[fn:combat]{*}}. The chosen settlement bonus is doubled\textsuperscript{\hyperref[fn:bonus]{**}}. Choose 5 (if you're first to Flag) or 2 (otherwise) artifacts from Resource Cards.} \\
       \darkcell[1.3]{C2 Grail}
-      & \lightcell[1.3]{Combat with Neutral Units cannot be skipped\textsuperscript{\hyperref[fn:combat]{*}}. Take the Grail Token and lose all remaining \svgeven{movement-note}.} \\
+      & \lightcell[1.3]{Combat with Neutral Units cannot be skipped\textsuperscript{\hyperref[fn:combat]{*}}. Take the Grail Token and lose all remaining \svgeven{movement-yellow}.} \\
     \end{tabularx}
     \medskip
   }
