--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -510,7 +510,7 @@ msgid ""
 "22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} "
+"40 \\\\ +2 \\svg{attack-yellow} \\\\ +2 \\svg{defense-yellow}} "
 "\\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{8}{ \\centering \\medskip \\let\\origbronze\\bronze "
@@ -527,7 +527,7 @@ msgstr ""
 "22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} "
+"40 \\\\ +2 \\svg{attack-yellow} \\\\ +2 \\svg{defense-yellow}} "
 "\\end{tabularx} }"
 
 #. type: wrapfigure
@@ -611,7 +611,7 @@ msgid ""
 "{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 "
-"\\svg{damage-table} by consuming Golems} \\\\ \\end{tabularx} }"
+"\\svg{damage-yellow} by consuming Golems} \\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{10}{ \\centering \\medskip \\let\\origbronze\\bronze "
 "\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
@@ -628,7 +628,7 @@ msgstr ""
 "{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Odvetný útok}} "
 "& \\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 32 \\\\ +1 Odvetný útok \\\\ Odstraňte dalších 2 "
-"\\svg{damage-table} sežráním Golemů} \\\\ \\end{tabularx} }"
+"\\svg{damage-yellow} sežráním Golemů} \\\\ \\end{tabularx} }"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:287
