--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -512,7 +512,7 @@ msgid ""
 "22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} "
+"40 \\\\ +2 \\svg{attack-yellow} \\\\ +2 \\svg{defense-yellow}} "
 "\\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{8}{ \\centering \\medskip \\let\\origbronze\\bronze "
@@ -529,7 +529,7 @@ msgstr ""
 "22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} "
+"40 \\\\ +2 \\svg{attack-yellow} \\\\ +2 \\svg{defense-yellow}} "
 "\\end{tabularx} }"
 
 #. type: wrapfigure
@@ -614,7 +614,7 @@ msgid ""
 "{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 "
-"\\svg{damage-table} by consuming Golems} \\\\ \\end{tabularx} }"
+"\\svg{damage-yellow} by consuming Golems} \\\\ \\end{tabularx} }"
 msgstr ""
 "\\hommtable[]{10}{ \\centering \\medskip \\let\\origbronze\\bronze "
 "\\let\\origsilver\\silver \\let\\origgolden\\golden \\let\\origazure\\azure "
@@ -631,7 +631,7 @@ msgstr ""
 "{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Kontratak}} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 32 \\\\ +1 Retaliation \\\\ Usuń dodatkowe 2\\,"
-"\\svg{damage-table} przy pochłanianiu Golemów} \\\\ \\end{tabularx} }"
+"\\svg{damage-yellow} przy pochłanianiu Golemów} \\\\ \\end{tabularx} }"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:287
