--- a/translations/title_page.tex/title_page.tex.pot
+++ b/translations/title_page.tex/title_page.tex.pot
@@ -45,6 +45,6 @@ msgid ""
 "\\includesvg[height=0.1px]{\\svgs/azure.svg} \\includesvg[height=0.1px]"
 "{\\svgs/gold.svg} \\includesvg[height=0.1px]{\\svgs/building_materials.svg} "
 "\\includesvg[height=0.1px]{\\svgs/valuables.svg} \\includesvg[height=0.1px]"
-"{\\svgs/attack_yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
-"defense_yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-table.svg} }"
+"{\\svgs/attack-yellow.svg} \\includesvg[height=0.1px]{\\svgs/"
+"defense-yellow.svg} \\includesvg[height=0.1px]{\\svgs/damage-yellow.svg} }"
 msgstr ""
