--- a/draft-scenarios/clash/arcane_artillery.tex
+++ b/draft-scenarios/clash/arcane_artillery.tex
@@ -100,8 +100,8 @@ During this Scenario:
 \hommtablemulticol[]{16}{
   \begin{tabularx}{0.95\linewidth}{X}
     \darkcell{\raisebox{-.2\height}{} \textbf{Arcane Artillery}}\\
-    \lightcell[1.8]{\svg{activation-table} Deal 1 \svg{damage-table} to target Unit by placing an Arcane Spike on it.} \\
-    \lightcell[3.8]{\svg{ongoing-table} A Unit with an Arcane Spike placed on it has its special ability negated and suffers -1 \svg{defense_yellow} for every\\Arcane Spike on it.} \\
+    \lightcell[1.8]{\svg{activation-yellow} Deal 1 \svg{damage-yellow} to target Unit by placing an Arcane Spike on it.} \\
+    \lightcell[3.8]{\svg{ongoing-yellow} A Unit with an Arcane Spike placed on it has its special ability negated and suffers -1 \svg{defense-yellow} for every\\Arcane Spike on it.} \\
   \end{tabularx}
 }
 
