--- a/draft-scenarios/sections/title_page.tex
+++ b/draft-scenarios/sections/title_page.tex
@@ -24,7 +24,7 @@
   \includesvg[height=0.1px]{\svgs/gold.svg}
   \includesvg[height=0.1px]{\svgs/building_materials.svg}
   \includesvg[height=0.1px]{\svgs/valuables.svg}
-  \includesvg[height=0.1px]{\svgs/attack_yellow.svg}
-  \includesvg[height=0.1px]{\svgs/defense_yellow.svg}
-  \includesvg[height=0.1px]{\svgs/damage-table.svg}
+  \includesvg[height=0.1px]{\svgs/attack-yellow.svg}
+  \includesvg[height=0.1px]{\svgs/defense-yellow.svg}
+  \includesvg[height=0.1px]{\svgs/damage-yellow.svg}
 }
