--- a/translations/the_hunt.tex/de.po
+++ b/translations/the_hunt.tex/de.po
@@ -412,7 +412,7 @@ msgid ""
 "22} & \\lightcell[1.8]{\\raisebox{-.25\\height}"
 "{\\includegraphics[height=15px]{\\images/hp.png}} 30} & \\lightcell[1.8]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"40 \\\\ +2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} "
+"40 \\\\ +2 \\svg{attack-yellow} \\\\ +2 \\svg{defense-yellow}} "
 "\\end{tabularx} }"
 msgstr ""
 
@@ -470,7 +470,7 @@ msgid ""
 "{\\includegraphics[height=15px]{\\images/hp.png}} 26 \\\\ +1 Retaliation}} & "
 "\\lightcell[2.8]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
 "{\\images/hp.png}} 32 \\\\ +1 Retaliation \\\\ Remove additional 2 "
-"\\svg{damage-table} by consuming Golems} \\\\ \\end{tabularx} }"
+"\\svg{damage-yellow} by consuming Golems} \\\\ \\end{tabularx} }"
 msgstr ""
 
 #. type: wrapfigure
